[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/floor/button.png" type="Texture" id=1]
[ext_resource path="res://scenes/floor/FloorButton.gd" type="Script" id=2]
[ext_resource path="res://assets/floor/button down.png" type="Texture" id=3]
[ext_resource path="res://assets/floor/button highlight.png" type="Texture" id=4]
[ext_resource path="res://assets/floor/button down highlighty.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "highlight",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "highlight",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="FloorButton" type="Node2D"]
script = ExtResource( 2 )

[node name="ButtonPressed" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 11 )
frames = SubResource( 2 )
animation = "highlight"

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 9 )
frames = SubResource( 3 )
animation = "highlight"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 6 )
rotation = 1.5708
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
